# nastran-find

./: .gitignore  CHANGELOG.md  CHECKLIST-RELEASE.md  CMakeLists.txt  README.md  TROUBLESHOOTING.md  doxyfile  nastranfind.pri  nastranfind.pro  version.pri
examples/: README.md
icons/: icon.rc  source.txt
include/: Engine  FileInfo  StringHelper
pdcurses/include/: curses.h
pdcurses/lib/: pdcurses.lib  pdcursew.def
src/: application.cpp  application.h  config.h.cmake  engine.cpp  engine.h  fileinfo.cpp  fileinfo.h  global.h  main.cpp  recentfile.cpp  recentfile.h  result.cpp  result.h  src.pro  stringhelper.cpp  stringhelper.h  version.h
test/: README.md
test/auto/: auto.pro
test/auto/engine/: engine.pro  tst_engine.cpp
test/auto/engine-include/: engine-include.pro  tst_engine-include.cpp
test/auto/engine-regex/: engine-regex.pro  tst_engine-regex.cpp
test/auto/engine_include/: engine_include.pro  tst_engine_include.cpp
test/auto/fileinfo/: fileinfo.pro  tst_fileinfo.cpp
test/auto/search/: search.pro  tst_search.cpp
test/auto/stringhelper/: stringhelper.pro  tst_stringhelper.cpp
test/manual/current_working_path/: README.md  TODO
test/manual/current_working_path/model-unix/: dos2unix.sh  test.dat.backup
test/shared/: static.pro
